@@ -59,7 +59,6 @@
 			<a name="textformatting"></a>
 			<b><span style="font-size:24px;">Text Formatting</span></b><br>
 Simple text formatting is done via the 'Formatting' menu just select a piece of text and select bold/italic or clear, italic text tends to be shown in the terminal as underlined, this can be set in the prefs.<br>
-<s>See the example file in PREFIX/share/ManPageEditor/examples</s>.<br>
 			<br>
 
 			<a name="todo"></a>
@@ -69,7 +68,7 @@ Simple text formatting is done via the 'Formatting' menu just select a piece of 
 			<s>Terminal command.</s><br>
 			Gzip pages.<br>
 			<s>Highlight line</s>.<br>
-			Wrap lines.<br>
+			<s>Wrap lines.</s><br>
 			<br>
 			Spell check.<br>
 			<s>Add template(s).</s><br>
