@@ -28,7 +28,7 @@ Highlight Colour
 #default (0/1), will be overwitten when prefs are saved
 check
 Wrap Lines
-0
+1
 
 #check box
 #type=check
